--- a/JsfClass/src/main/resources/de/muellerbruehl/demo/messages.properties
+++ b/JsfClass/src/main/resources/de/muellerbruehl/demo/messages.properties
@@ -1,4 +1,9 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
+ChooseEntry=
+javax.faces.validator.LongRangeValidator.MAXIMUM=der Wert {0} ist falsch!\
+Erlaubt ist {1} bis {2}
+javax.faces.validator.LongRangeValidator.NOT_IN_RANGE=javax.faces.validator.LongRangeValidator.MAXIMUM
+lblAge=Age
 msgValueNeeded=Wert erforderlich
 titleBill=Rechnung
