--- a/JsfClass/src/main/resources/de/muellerbruehl/demo/messages_de.properties
+++ b/JsfClass/src/main/resources/de/muellerbruehl/demo/messages_de.properties
@@ -1,4 +1,9 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
+javax.faces.validator.LongRangeValidator.MAXIMUM=der Wert {0} ist falsch!\
+Erlaubt ist {1} bis {2}
+javax.faces.validator.LongRangeValidator.NOT_IN_RANGE=der Wert {3} ist falsch!\
+Erlaubt ist {0} bis {1}
+lblAge=Alter
 msgValueNeeded=Wert erforderlich
 titleBill=Rechnung
