--- a/JsfClass/src/main/resources/de/muellerbruehl/demo/messages_en.properties
+++ b/JsfClass/src/main/resources/de/muellerbruehl/demo/messages_en.properties
@@ -1,5 +1,8 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 ChooseEntry=Choose entry...
+javax.faces.validator.LongRangeValidator.MAXIMUM=The Value is too big
+javax.faces.validator.LongRangeValidator.NOT_IN_RANGE=der Wert ist zu hoch!
+lblAge=Age
 msgValueNeeded=Value required
 titleBill=Bill
